traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: value unary_! is not a member of Unit
  while(!PositionFinale()){
        ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:12: warning: enclosing method PositionFinale has result type Unit: return value discarded
      return true
      ^Snake:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:14: warning: enclosing method PositionFinale has result type Unit: return value discarded
      return false
      ^Snake:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:19: warning: enclosing method PositionFinale has result type Unit: return value discarded
      return true
      ^Snake:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:22: warning: enclosing method PositionFinale has result type Unit: return value discarded
  return false
  ^